--- a/00_Intro-to-HTML/index.html
+++ b/00_Intro-to-HTML/index.html
@@ -31,7 +31,7 @@
     </section>
    
     
-    <h3 class="subheading"> Tales from the Vital Brooklyn sauna </h1>
+    <h3 class="subheading"> As temperatures rise, what are you doing to prepare against the heat? </h1>
         <section class="project_about">
 
             <iframe class="" width="640" height="360" src="" frameborder="0" allow="autoplay; fullscreen"
@@ -48,7 +48,7 @@
             </p>
 
             <p class="">
-                Tales from the hottest club in Brooklyn
+                Tales from the Vital sauna, the hottest club in Brooklyn
             </p>
 
             <p><img src="">
