--- a/00_Intro-to-HTML/index.html
+++ b/00_Intro-to-HTML/index.html
@@ -31,8 +31,8 @@
     </section>
    
     
-    <h3 class="subheading"> As temperatures rise, what are you doing to prepare against the heat? </h1>
-        <section class="project_about">
+    <h3 class="subheading">  </h1>
+        <section class="project_about"> Tales from the Vital sauna, the hottest club in Brooklyn
 
             <iframe class="" width="640" height="360" src="" frameborder="0" allow="autoplay; fullscreen"
                 allowfullscreen></iframe>
@@ -48,7 +48,7 @@
             </p>
 
             <p class="">
-                Tales from the Vital sauna, the hottest club in Brooklyn
+                As temperatures rise, what are you doing to prepare against the heat?
             </p>
 
             <p><img src="">
