--- a/00_Intro-to-HTML/index.html
+++ b/00_Intro-to-HTML/index.html
@@ -32,7 +32,7 @@
    
     
     <h3 class="subheading">  </h1>
-        <section class="project_about"> Tales from the Vital sauna, the hottest club in Brooklyn
+        <section class="project_about"> Tales from the hottest club in Brooklyn
 
             <iframe class="" width="640" height="360" src="" frameborder="0" allow="autoplay; fullscreen"
                 allowfullscreen></iframe>
@@ -57,7 +57,7 @@
         </section>
 
         <section class="footer">
-            <p class="footer"> Last updated on 3 September 2024. Copyright halfabluebanana </a>
+            <p class="footer"> Last updated on 4 September 2024. Copyright halfabluebanana </a>
         </section>
 
 </body>
