--- a/00_Intro-to-HTML/index.html
+++ b/00_Intro-to-HTML/index.html
@@ -58,6 +58,7 @@
 
         <section class="footer">
             <p class="footer"> Last updated on 4 September 2024. Copyright halfabluebanana </a>
+            <a href="https://saunalist.org"> Our sister site. A review of saunas around the world </a>
         </section>
 
 </body>
